# laic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
ci/: boundary-check.sh
crates/laic/: Cargo.toml  LICENSE  README.md
crates/laic/benches/: b_host_local_validation.rs  codec_bench.rs  windows_local_validation.rs
crates/laic/benches/b_host_local_validation/: child.rs  measure.rs  mod.rs  roundtrip.rs  types.rs
crates/laic/benches/windows_local_validation/: child.rs  measure.rs  mod.rs  process.rs  roundtrip.rs  types.rs
crates/laic/src/: emergency.rs  error.rs  flow.rs  gateway.rs  handshake.rs  lib.rs  pattern.rs
crates/laic/src/codec/: arrow.rs  mod.rs  proto.rs
crates/laic/src/error/: protocol.rs
crates/laic/src/handshake/: tests.rs
crates/laic/src/protocol/: constants.rs  header.rs  message.rs  mod.rs
crates/laic/src/transport/: framing.rs  ipc.rs  mod.rs  quic.rs  tls.rs
crates/laic/tests/: emergency_tests.rs  error_tests.rs  gateway_tests.rs  ipc_transport.rs  pattern_tests.rs  quic_transport.rs
crates/laic/tests/support/: quic_transport.rs  quic_transport_handshake.rs
crates/laicc/: Cargo.toml  README.md
crates/laicc-verify/: Cargo.toml  build.rs
crates/laicc-verify/src/: lib.rs
crates/laicc-verify/tests/: negative.rs  roundtrip.rs
crates/laicc/src/: ast.rs  error.rs  laic.pest  lib.rs  main.rs  parser.rs  validate.rs
crates/laicc/src/codegen/: mod.rs  python_contract.rs  python_deserialize.rs  python_serialize.rs  python_types.rs  rust_contract.rs  rust_deserialize.rs  rust_deserialize_fields.rs  rust_serialize.rs  rust_types.rs  typescript_contract.rs  typescript_deserialize.rs  typescript_serialize.rs  typescript_types.rs
crates/laicc/tests/: cli.rs  contract_surface_compat.rs  integration.rs  parser_tests.rs  python_codegen.rs  python_verify.rs  typescript_codegen.rs  typescript_verify.rs  validate_tests.rs
crates/laicc/tests/fixtures/: echo.laic  embedding.laic  errors_only.laic  escaped_defaults.laic  image_classify.laic  list_types.laic  map_types.laic  multi_skill.laic  optional_types.laic  scalar_types.laic  tensor_container.laic
crates/laicc/tests/python_runtime/: README.md
crates/laicc/tests/python_verify_support/: mod.rs
crates/laicc/tests/support/: contract_surface.rs  mod.rs  python_fixture.rs  typescript_fixture.rs
crates/laicc/tests/support/contract_surface/: drivers.rs  fixture.rs
crates/laicc/tests/typescript_runtime/: README.md  package-lock.json  package.json  tsconfig.json
crates/laicc/tests/typescript_runtime/src/: index.ts
crates/laicc/tests/typescript_verify_support/: mod.rs
docs/: BOUNDARY.md  PERFORMANCE.md  PUBLIC_EXPORT.md  RELEASES.md  STABILITY.md
examples/mechanism-only/: README.md  echo_contract.laic  run.ps1  run.sh
scripts/: release-smoke.ps1  release-smoke.sh
