[package]
name = "laicc"
description = "LAIC IDL compiler for Rust, Python, and TypeScript contract bindings"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "laicc"
path = "src/main.rs"

[dependencies]
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }

[features]
python-verify = []
typescript-verify = []
contract-surface-verify = ["python-verify", "typescript-verify"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
